# hs-crush-crush

./: .gitignore  bower.json  bower.nix  crush-crush.cabal  default.nix  release.nix  shell.nix
nix-extra/: generated.nix  node-packages.json
src/: Main.hs
src/Machinery/: Gifts.hs  Girls.hs  Main.hs  Prediction.hs  Timer.hs
src/Models/: Game.hs
