name:                crush-crush
version:             0.1.0.0
synopsis:            Date catgirls!
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable crush-crush
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , Cabal
                     , containers
                     , lens
                     , reflex-dom
                     , time
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
