name:                crush-crush
version:             0.1.0.0
synopsis:            Date catgirls!
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
category:            Game
build-type:          Simple
cabal-version:       >=1.10

Flag opt
  default: False
  manual:  True

executable crush-crush
  main-is:             Main.hs
  build-depends:       base == 4.*
                     , bytestring
                     , containers
                     , file-embed
                     , lens
                     , mtl
                     , reflex-dom
                     , scientific
                     , stitch
                     , text
                     , time
                     , transformers

  if impl(ghcjs)
    build-depends:     ghcjs-base

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  if flag(opt)
    ghc-options:       -O2
  else
    ghc-options:       -O0
